# interview-challange

./: .gitignore  .pre-commit-config.yaml  README.md  REVIEW.md  docker-compose.yml  pyproject.toml
app/: main.py  sizing.py
scripts/: demo.py  pre-push.sh  sync-public.sh
tests/: test_api.py  test_sizing.py
wiremock/mappings/: metrics-svc-001.json  metrics-svc-002.json  metrics-svc-003.json  metrics-svc-004.json  metrics-svc-flaky.json  services.json
