[project]
name = "resource-advisor-api"
version = "0.1.0"
description = "Resource Advisor API — right-sizing recommendations for AWS Lambda and EKS pods."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "httpx>=0.27",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
